--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -124,10 +124,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "consumer_key = 'XwzL5M7nPXThUzSnLwAwVV0Hx'\n",
-    "consumer_secret = 'YEhoXrHUOWFrZeVPhbDcviWXn3Dl3YQhq5KNv40l0fTpukNgQK'\n",
-    "access_token = '1377614154-MJkxmpMpsKgIFkHFORPKGdFI1R5PcznCvdXyCOA'\n",
-    "access_secret = 'dp90TZUnYV2EAWL9KROGrr1YN0lEyRPu2LJ5x2GTarUq4'\n",
+    "consumer_key = ,
+    "consumer_secret = ,
+    "access_token = ,
+    "access_secret = ,
     "\n",
     "auth = tweepy.OAuthHandler(consumer_key, consumer_secret)\n",
     "auth.set_access_token(access_token, access_secret)\n",
